navbar fixed. footer fixed. jumbotron image overlap fixed. added menue file. added specials file.

--- a/Wev Dev Cources/HTML, CSS , JS cource/Restorent Web Site/bootstrap/css/style.css
+++ b/Wev Dev Cources/HTML, CSS , JS cource/Restorent Web Site/bootstrap/css/style.css
@@ -1,3 +1,5 @@
+/* styles for homepage */
+
 *{
 	box-sizing: border-box;
 }
@@ -36,8 +38,10 @@ img{
 		/* border-width: 10px; */
 		padding: 0;
 		margin: 20px 0 20px 0 ;
+		padding: 0;
 
 	}
+
 }
 
 @media (min-width:768px) and (max-width:991px){
@@ -59,12 +63,6 @@ img{
 	}
 	 .navbar-brand{
 		align-items: left;
-	}
-	#nav-list{
-		position: absolute;
-		right: 80px;
-		top: 0px;
-		margin-top: 35px;
 	}
 	.jumbotron{
 		height: 500px;
@@ -89,6 +87,9 @@ img{
 		margin: 20px 0 20px 0 ;
 
 	}
+	.invisible-img{
+		display: none;
+	}
 
 }
 
@@ -98,15 +99,14 @@ img{
  }
  #nav-list{
 	 position: absolute;
-	 right: 80px;
-	 top: 0px;
+	 right: 10%;
+	 top: 10px;
 	 margin-top: 35px;
  }
  .jumbotron{
 	 height: 600px;
 	 border-style: solid;
 	 border-color: #400200;
-	 /* border-width: 10px; */
 	 background: url("./../../media/images/jumbotron_1200.jpg") no-repeat;
 	 background-position: center;
 
@@ -114,19 +114,21 @@ img{
  #menue-tile{
 	 margin-left:15px;
  }
- .invisible-img{
-	 display: none;
-	 visibility: hidden;
- }
+
 }
 
-
+@media (min-width:768px) {
+	.invisible-img{
+		display: none;
+	}
+}
 
 .tile{
 
 	margin-left: auto;
-	/* margin-left: 10%; */
+	margin-bottom:10px;
 	height: 250px;
+	border-radius: 5px;
 	/* border-color: gray; */
 	border-width: 0px;
 	width: 100%;
@@ -178,3 +180,60 @@ img{
 .jumbotron img{
 	margin: 0 10px 0 0 ;
 }
+
+.footer-hr{
+	background-color: blue;
+	height: 2px;
+	width: 50%;
+	margin-bottom: 20px;
+}
+
+.footer-title{
+	text-decoration: none;
+	font-size: 1.2em;
+	font-weight: bold;
+	color: black;
+}
+/* end style for homepage */
+
+
+
+
+/* styles for menu page */
+
+#menu-page-title{
+	margin: 20px;
+	text-align: center;
+	color: white;
+	/* background-color: black; */
+}
+.menu-page-tile{
+	position: relative;
+	width: 200px;
+	height: 200px;
+	/* padding: 0 ; */
+	margin: 0 auto 15px;
+
+	/* background-color: black; */
+}
+.menu-img{
+	/* position: absolute; */
+	/* width: 100%; */
+	/* height:100%; */
+}
+
+.tile-title{
+	position: absolute;
+	bottom: -10px;
+	right: -5%;
+	width: 100%;
+	/* height: 10%; */
+	font-size: 1.2em;
+	color: white;
+	background-color: black;
+	opacity: .8;
+}
+
+
+
+/* end of styles for menu page */
